--- a/地图和定位/Info.plist
+++ b/地图和定位/Info.plist
@@ -43,5 +43,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationUsageDescription</key>
+	<string>当前应用需要启用定位服务方可使用</string>
 </dict>
 </plist>
