--- a/地图和定位/Info.plist
+++ b/地图和定位/Info.plist
@@ -45,5 +45,7 @@
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>当前应用需要启用定位服务方可使用</string>
+	<key>NSLocationUsageDescription</key>
+	<string>当前需要启用定位服务</string>
 </dict>
 </plist>
